--- a/vignettes/CNEs.Rmd
+++ b/vignettes/CNEs.Rmd
@@ -13,7 +13,7 @@ editor_options:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(cache = TRUE)
 ```
 
 I am using the [CNEr](https://bioconductor.org/packages/release/bioc/html/CNEr.html)
