--- a/vignettes/TandemSiteDuplications.Rmd
+++ b/vignettes/TandemSiteDuplications.Rmd
@@ -12,6 +12,10 @@ editor_options:
   chunk_output_type: console
 ---
 
+```{r setup}
+knitr::opts_chunk$set(cache = TRUE)
+```
+
 # Load pacakges and data
 
 See the `vignette("OikScrambling", package = "OikScrambling")` for general
