--- a/vignettes/OrthogroupSyntenies.Rmd
+++ b/vignettes/OrthogroupSyntenies.Rmd
@@ -18,9 +18,9 @@ different objects are prepared.
 
 ```{r load_packages_and_data}
 library('OikScrambling')   |> suppressPackageStartupMessages()
-(genomes <- OikScrambling:::loadAllGenomes(compat = F))
-(transcripts <- OikScrambling:::loadAllTranscriptsGR(compat = F) |> suppressWarnings())
-(load("BreakPoints.Rdata"))
+genomes <- OikScrambling:::loadAllGenomes(compat = F)
+transcripts <- OikScrambling:::loadAllTranscriptsGR(compat = F) |> suppressWarnings()
+load("BreakPoints.Rdata")
 ```
 
 Orthogroups
